# go-starter-template

./: .bazeliskrc  .bazelrc  .editorconfig  .env.example  .gitignore  .goreleaser.yaml  BUILD.bazel  MODULE.bazel  Makefile  README.md  go.mod  go.sum  main.go  main_test.go  renovate.json  sqlc.yaml
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml  reviewers.yml
.github/ISSUE_TEMPLATE/: 01_bug_report.yml  02_feature_request.yml  03_failing_test.yml  04_tooling.yml  05_documentation.yml  config.yml
.github/workflows/: auto-assign-issues.yml  deploy-docusaurus.yml  gitleaks.yml  goreleaser.yml  govulncheck.yml  greetings.yml  labeler.yml  repo-stats-collector.yml  semantic-pull-request.yml  stale-issue.yml  test-docusaurus.yml
business/sdk/nats/: nats.go
db/migrations/: 20240621180201_create_album.sql
db/queries/: albums.sql
db/sqlc/: albums.sql.go  models.go
docs/: docusaurus.config.ts  package-lock.json  package.json
docs/blog/: 2024-06-21-setting-up-database-process.md  2024-06-21-working-with-database.md  2024-06-22-http-codes.md  authors.yml  tags.yml
docs/blog/2024-06-22-http-codes/: index.md
docs/blog/2024-06-23-understanding-and-integrating-nats/: index.md
docs/docs/tutorial-basics/: create-a-page.md  markdown-features.mdx
proto/greet/v1/: BUILD.bazel  greeting.proto
sarvsav/go-starter-template/: README.md
sarvsav/go-starter-template/ghrs-data/: views_clones_aggregate.csv
sarvsav/go-starter-template/ghrs-data/snapshots/: 2024-06-16_190525_top_paths_snapshot.csv  2024-06-16_190525_views_clones_series_fragment.csv  2024-06-17_070735_top_paths_snapshot.csv  2024-06-17_070735_views_clones_series_fragment.csv  2024-06-18_070747_top_paths_snapshot.csv  2024-06-18_070747_top_referrers_snapshot.csv  2024-06-18_070747_views_clones_series_fragment.csv  2024-06-19_070713_top_paths_snapshot.csv  2024-06-19_070713_top_referrers_snapshot.csv  2024-06-19_070713_views_clones_series_fragment.csv  2024-06-20_070730_top_paths_snapshot.csv  2024-06-20_070730_top_referrers_snapshot.csv  2024-06-20_070730_views_clones_series_fragment.csv  2024-06-21_070810_top_paths_snapshot.csv  2024-06-21_070810_views_clones_series_fragment.csv  2024-06-22_070748_top_paths_snapshot.csv  2024-06-22_070748_top_referrers_snapshot.csv  2024-06-22_070748_views_clones_series_fragment.csv  2024-06-23_070816_top_paths_snapshot.csv  2024-06-23_070816_top_referrers_snapshot.csv  2024-06-23_070816_views_clones_series_fragment.csv  (+650 more)
sarvsav/go-starter-template/latest-report/: report.html  report.md  report_for_pdf.html
scripts/shell/: buildbuddy.sh  gen-protobuffer.sh  install.sh  lint-proto.sh  main.bash  spin-casdoor.sh  spin-dolt.sh
