load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

# gazelle:prefix github.com/sarvsav/go-starter-template
# gazelle:build_file_name BUILD
# gazelle:proto disable_global
gazelle(
    name = "gazelle",
)

# Reference: https://github.com/google/goblet/blob/master/gazelle-update-repos
gazelle(
    name = "gazelle-update-repos",
    command = "update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune=true",
        "-build_file_proto_mode=disable_global",
    ],
)

go_library(
    name = "go-starter-template_lib",
    srcs = ["main.go"],
    importpath = "github.com/sarvsav/go-starter-template",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "go-starter-template",
    embed = [":go-starter-template_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go-starter-template_test",
    srcs = ["main_test.go"],
    embed = [":go-starter-template_lib"],
)
