"""A module file named the dependencies of the project."""

module (
    name = "go-starter-template",
    repo_name = "com_github_sarvsav_golang-starter-template",
    version = "1.0.0"
)

# Defining dependencies and latest versions are always listed on https://registry.bazel.build
bazel_dep(
    name = "rules_go",
    version = "0.48.0"
)

bazel_dep(
    name = "gazelle",
    version = "0.37.0"
)

bazel_dep(
    name = "rules_proto",
    version = "6.0.0.bcr.1"
)

# As we have a fixed version in go.mod file, we can sync with the same version using go_sdk module extension
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")

# Download SDK for fixed OS/architecture
go_sdk.download(
    goos = "linux",
    goarch = "amd64",
    version = "1.22.1"
)

# Register the GO SDK installed on host
go_sdk.host()

bazel_dep(name = "protobuf", version = "27.0", repo_name = "com_google_protobuf")
