load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "greetv1_proto",
    srcs = ["greeting.proto"],
    visibility = ["//visibility:public"],
    deps = ["//proto/google/api:annotations_proto"],
)

go_proto_library(
    name = "greetv1_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/sarvsav/go-starter-template/proto/greet/v1",
    proto = ":greetv1_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/google/api:annotations_proto",
    ],
)
